--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
     background-color:var(--cor1);
     position: fixed;
     font-family:var(--font-do-topo);
+    box-shadow:0px 2px 10px rgba(0, 0, 0, 0.699);
 }
 .topo .tam-max{
     max-width: 950px;
@@ -68,7 +69,7 @@ div.texto{
     font-family: var(--font-do-topo);
     text-align: center;
     font-size: 18px;
-    margin-bottom: 20px;
+    margin: 20px 0;
 }
 .texto p{
     font-family: var(--font-padrao);
